tests/spec/emit/snapshots/large_uint64_decimal_literal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> uint64 {
    18446744073709551615
  }
---
package main

func test() uint64 {
	return 18446744073709551615
}
