tests/spec/emit/snapshots/later_struct_tag_attribute_can_disable_omitempty.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json(omitempty)]
  #[json(!omitempty)]
  struct User {
    id: int,
  }
---
package main

type User struct {
	Id int `json:"id"`
}
