tests/spec/emit/snapshots/less_than_negative_number.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    let n = 5;
    n < -3
  }
---
package main

func test() bool {
	n := 5
	return n < -3
}
