tests/spec/emit/snapshots/let_annotated_unknown_declares_any_for_concrete_value.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn identity(value: int) -> int {
    value
  }
  
  fn describe(value: Unknown) -> string {
    match assert_type<string>(value) {
      Some(text) => text,
      None => "",
    }
  }
  
  fn test() {
    let mut value: Unknown = identity(1)
    value = "two"
    if describe(value) != "two" {
      panic("annotated Unknown binding was declared at the concrete type")
    }
  }
---
package main

func identity(value int) int {
	return value
}

func describe(value any) string {
	ret_1, ok := value.(string)
	if ok {
		text := ret_1
		return text
	} else {
		return ""
	}
}

func test() {
	var value any = identity(1)
	value = "two"
	if describe(value) != "two" {
		panic("annotated Unknown binding was declared at the concrete type")
	}
}
