tests/spec/emit/snapshots/let_annotated_unknown_declares_any_for_propagated_value.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn fallible() -> Result<int, error> {
    Ok(1)
  }
  
  fn describe(value: Unknown) -> string {
    match assert_type<string>(value) {
      Some(text) => text,
      None => "",
    }
  }
  
  fn run() -> Result<string, error> {
    let mut value: Unknown = fallible()?
    value = "two"
    Ok(describe(value))
  }
  
  fn test() {
    let text = match run() {
      Ok(text) => text,
      Err(_) => "",
    }
    if text != "two" {
      panic("propagated Unknown binding was declared at the concrete type")
    }
  }
---
package main

func fallible() (int, error) {
	return 1, nil
}

func describe(value any) string {
	if text, ok := value.(string); ok {
		return text
	} else {
		return ""
	}
}

func run() (string, error) {
	var value any
	ret, err := fallible()
	if err != nil {
		return "", err
	}
	value = ret
	value = "two"
	return describe(value), nil
}

func test() {
	var text_1 string
	if text, err := run(); err == nil {
		text_1 = text
	} else {
		text_1 = ""
	}
	if text_1 != "two" {
		panic("propagated Unknown binding was declared at the concrete type")
	}
}
