tests/spec/emit/snapshots/let_bind_unit_returning_call.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn do_nothing() {}
  
  fn test() {
    let r = do_nothing()
    let _ = r
  }
---
package main

func doNothing() {}

func test() {
	doNothing()
}
