tests/spec/emit/snapshots/let_binding_as_last_expression_in_block.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let _ = {
      let _ = fmt.Println("")
    }
  }
---
package main

import "fmt"

func test() {
	fmt.Println("")
}
